# t24

./: .gitignore  Cargo.toml  n.sh
elf/: riscv32im-succinct-zkvm-elf
near_indexer/: Cargo.toml
near_indexer/src/: lib.rs  main.rs
near_indexer/src/streamer/: errors.rs  fetchers.rs  metrics.rs  mod.rs  utils.rs
t24_cli/: Cargo.toml
t24_cli/src/: lib.rs  main.rs
t24_lib/: Cargo.toml
t24_lib/src/: lib.rs  main.rs
t24_lib/src/cli/: mod.rs
t24_lib/src/db/: account.rs  brick.rs  mod.rs  trial.rs
t24_lib/src/db/tick/: mem.rs  mod.rs  prelude.rs  server.rs
t24_lib/src/db/trade/: mem.rs  prelude.rs
t24_lib/src/instrument/: mod.rs
t24_lib/src/near/: mod.rs  trial.rs
t24_lib/src/oanda/: mod.rs
t24_lib/src/server/: mod.rs
t24_lib/src/tick/: mod.rs  near.rs  prelude.rs  server.rs
t24_lib/src/trade/: mem.rs  mod.rs  prelude.rs
t24_lib/src/trial/: mod.rs  near.rs
t24_macros/: Cargo.toml
t24_macros/src/: fns.rs  impls.rs  lib.rs  structs.rs
t24_macros/src/traits/: mod.rs  to_lowercase.rs  to_strings.rs
t24_near/: Cargo.toml
t24_near/src/: lib.rs
t24_near/tests/: integration_tests.rs  test_basics.rs
t24_near_indexer/: Cargo.toml
t24_near_indexer/src/: main.rs
t24_near_lib/: Cargo.toml
t24_near_lib/src/db/: account.rs  mod.rs  trial.rs
t24_server/: Cargo.toml
t24_server/src/: lib.rs  main.rs
t24_server/src/gt/: mod.rs
t24_test/: Cargo.toml
t24_test/src/: main.rs
t24_zk_program/: Cargo.toml
t24_zk_program/.github/workflows/: prove.yml
t24_zk_program/src/: main.rs
t24_zk_script/: Cargo.toml  build.rs
