[package]
name = "t24"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.35"
rust_decimal_macros = "1.34.2"
rusqlite = { version = "0.32.1", features = ["bundled","backup"] }
chrono = {version = "0.4.38", features = ["serde"]}
reqwest = { version = "0.12.5", default-features = false, features = ["json", "blocking", "cookies","brotli","gzip","http2","rustls-tls"] }
rayon = "1.10.0"
rouille = {version="3.6.2", default-features = false }
rustls = "0.23.11"
webpki-roots = "0.26.3"
env_logger = "0.11.3"
t24_macros = { path = "t24_macros" }
csv = "1.3.0"
log = "0.4.21"

#uuid = {version = "1.10.0", features = ["fast-rng", "v4", "serde"] }
#polars = {version = "0.41.3"}
#redis = { version = "0.25.3", features = ["json"] }
#clap = { version = "4.5.9", features = ["cargo"]}

[build-dependencies]
bindgen = "0.58.1"

[workspace]
resolver = "2"
members = [
    "t24_macros",
    "t24_lib",
    "t24_server",
    "t24_near",
    "near_indexer",
    "t24_near_indexer",
    "t24_test"
]

[workspace.dependencies]
tokio = { version = "1.28", default-features = false }
actix = "0.13.0"
actix-http = "3.6"
actix-rt = "2"
actix-web = "4.1"
near-sdk = { version = "5.4.0"}
near-workspaces = { version = "0.12.0", features = ["unstable"] }
near-cli-rs = {version = "0.14.3", default-features = false}
near-jsonrpc-client = {git="https://github.com/near/nearcore", rev="1877e3dd2bf69908aa092e4d412eb417b8084c15" }
near-account-id = { version = "1.0.0-alpha.4", features = [
    "internal_unstable",
    "serde",
    "borsh",
] }
near-jsonrpc-primitives = {git="https://github.com/near/nearcore", rev="1877e3dd2bf69908aa092e4d412eb417b8084c15" }
near-indexer = { git = "https://github.com/near/nearcore", rev="1877e3dd2bf69908aa092e4d412eb417b8084c15" }
node-runtime = { git = "https://github.com/near/nearcore", rev="1877e3dd2bf69908aa092e4d412eb417b8084c15" }
near-crypto = { git = "https://github.com/near/nearcore", rev="1877e3dd2bf69908aa092e4d412eb417b8084c15" }
near-client = { git = "https://github.com/near/nearcore", rev="1877e3dd2bf69908aa092e4d412eb417b8084c15" }
near-indexer-primitives = { git = "https://github.com/near/nearcore", rev="1877e3dd2bf69908aa092e4d412eb417b8084c15" }
near-primitives = { git = "https://github.com/near/nearcore", rev="1877e3dd2bf69908aa092e4d412eb417b8084c15" }
near-chain-configs = { git = "https://github.com/near/nearcore", rev="1877e3dd2bf69908aa092e4d412eb417b8084c15" }
near-o11y = { git = "https://github.com/near/nearcore", rev="1877e3dd2bf69908aa092e4d412eb417b8084c15" }
near-parameters = { git = "https://github.com/near/nearcore", rev="1877e3dd2bf69908aa092e4d412eb417b8084c15" }
near-store = { git = "https://github.com/near/nearcore", rev="1877e3dd2bf69908aa092e4d412eb417b8084c15" }
nearcore = { git = "https://github.com/near/nearcore", rev="1877e3dd2bf69908aa092e4d412eb417b8084c15" }
rocksdb = { version = "0.21.0", default-features = false, features = [
    "snappy",
    "lz4",
    "zstd",
    "zlib",
    "jemalloc",
] }