[package]
name = "t24_lib"
version = "0.1.0"
edition = "2021"

[features]
std = [
    "rusqlite","rayon","env_logger","csv","log","bincode","tracing","reqwest",
#    "near-jsonrpc-client",
#    "near-jsonrpc-primitives",
#    "near-primitives",
#    "near-cli-rs",
    "clap",
    "near-workspaces",
    "tokio",
    "chrono",
    "rust_decimal",
    "rust_decimal_macros"
]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.35",optional = true }
rust_decimal_macros = { version = "1.34.2",optional = true }
rusqlite = { version = "0.32.1", features = ["bundled","backup"], optional = true }
chrono = {version = "0.4.38", features = ["serde"], optional = true}
rayon = { version="1.10.0", optional = true }
env_logger = { version = "0.11.3", optional = true  }
csv = { version = "1.3.0", optional = true  }
log = { version = "0.4.21", optional = true  }
t24_macros = { path = "../t24_macros" }
bincode = {version = "2.0.0-rc.3", features = ["serde"], optional = true }
tracing = {version = "0.1.40",features = ["log"], optional = true }
reqwest = { version = "0.12.5", default-features = false, features = ["json", "blocking","rustls-tls"], optional = true  }
#near-cli-rs = {workspace = true, optional = true}
near-workspaces = {workspace = true, optional = true}
clap = {version = "4.5.16", features = ["derive"], optional = true}
near-sdk = {workspace = true}
serde_repr = "0.1.19"
tokio = {workspace = true, optional = true}
#uuid = {version = "1.10.0", features = ["fast-rng", "v4", "serde"] }
