[package]
name = "t24_macros"
version = "0.1.0"
authors = ["Yorex AI"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.72"}
quote = "1.0"
heck = "0.3.2"
proc-macro2 = "1.0"
