[package]
name = "t24_near_indexer"
version = "0.1.0"
edition = "2021"
rust-version = "1.79.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
actix = {workspace = true}
actix-cors = "0.6.1"
actix-http= {workspace = true}
actix-rt = {workspace = true}
actix-web = {workspace = true}
serde_json = "1.0"
rust_decimal = "1.35"
rust_decimal_macros = "1.34.2"
chrono = {version = "0.4.38", features = ["serde"]}
rustls = "0.23.11"
webpki-roots = "0.26.3"
env_logger = "0.11.3"
near_indexer = { path = "../near_indexer" }
t24_lib = { path = "../t24_lib", features = ["std"] }
csv = "1.3.0"
log = "0.4.21"
tracing-subscriber = "0.3.18"
near-o11y = {workspace = true}
tokio = {workspace = true}
#uuid = {version = "1.10.0", features = ["fast-rng", "v4", "serde"] }
#polars = {version = "0.41.3"}
#redis = { version = "0.25.3", features = ["json"] }
#clap = { version = "4.5.9", features = ["cargo"]}

