[package]
name = "t24_near_lib"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.35"
rust_decimal_macros = "1.34.2"
chrono = {version = "0.4.38", features = ["serde"]}
env_logger = "0.11.3"
t24_macros = { path = "../t24_macros" }
near-sdk = {version = "5.3"}
#uuid = {version = "1.10.0", features = ["fast-rng", "v4", "serde"] }
