[package]
name = "t24_server"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = {workspace = true}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.35"
rust_decimal_macros = "1.34.2"
rusqlite = { version = "0.32.1", features = ["bundled","backup"] }
chrono = {version = "0.4.38", features = ["serde"]}
rayon = "1.10.0"
env_logger = "0.11.3"
csv = "1.3.0"
log = "0.4.21"
t24_lib = { path = "../t24_lib" }
bincode = {version = "2.0.0-rc.3", features = ["serde"]}
near-jsonrpc-client = {workspace = true}
near-account-id = {workspace = true}
near-jsonrpc-primitives = {workspace = true}
near-primitives = {workspace = true}
reqwest = { version = "0.12.5", default-features = false, features = ["json", "blocking", "cookies","brotli","gzip","http2","rustls-tls"] }

#uuid = {version = "1.10.0", features = ["fast-rng", "v4", "serde"] }
